<resources>
    <string name="app_name">乐分购-客户管理</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新\u2026</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载\u2026</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_failed">加载失败</string>

    <string name="login">登录</string>
    <string name="account_err">请输入账号/手机号</string>
    <string name="password_err">请输入密码</string>
    <string name="account_phone">账号/手机号</string>
    <string name="password">密码</string>
    <string name="client">客户</string>
    <string name="input">录入</string>
    <string name="setting">设置</string>
    <string name="all">全部</string>
    <string name="sign">已签约</string>
    <string name="intention">意向</string>
    <string name="modify_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="modify">修改</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">再输入一遍新密码</string>
    <string name="password_not_null">输入密码不能为空</string>
    <string name="two_password_inconsistent">输入两次新密码不一致</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="net_error">网络请求异常，请稍后重试</string>
    <string name="hint">提示</string>
    <string name="logout_hint">是否退出登录?</string>
    <string name="quit">退出</string>
    <string name="company_name">公司名称</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="company_pic">公司照片</string>
    <string name="company_address">公司地址</string>
    <string name="input_company_address">请输入公司地址</string>
    <string name="contact_number">联系电话</string>
    <string name="input_contact_number">请输入联系电话</string>
    <string name="contacts">联系人</string>
    <string name="contact">联系</string>
    <string name="input_contacts">请输入联系人</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择城市</string>
    <string name="select_county">选择县区</string>
    <string name="industry">行业</string>
    <string name="select_industry">选择行业</string>
    <string name="input_service_record">请输入业务记录</string>
    <string name="add">添加</string>
    <string name="registration_time">登记时间</string>
    <string name="add_record">添加记录</string>
    <string name="record">业务记录</string>
    <string name="modify_company_info">修改公司信息</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete_record">确认删除此条业务记录？</string>
    <string name="complete">完成</string>
    <string name="location_error">获取当前位置失败</string>
    <string name="ranking_list">排行榜</string>
    <string name="contact_day">当天联系</string>
    <string name="successful_customer">成功客户</string>
    <string name="selected_industry">请选择行业</string>
    <string name="search_goods">搜索商品</string>
    <string name="no_data_more">暂无更多</string>
    <string name="selected_province_again">请重新选择省份</string>
    <string name="selected_city_again">请重新选择城市</string>
    <string name="selected_cities">请选择省份/城市/区县</string>
    <string name="please_input_contacts">请输入联系人</string>
    <string name="please_input_details_address">请输入详细联系地址</string>
    <string name="please_input_phone">请输入联系号码</string>
    <string name="please_input_company_name">请输入公司名称</string>
    <string name="please_selected_company_image">请选择公司照片</string>
    <string name="intentional">有意向</string>
    <string name="address_colon">地址：</string>
    <string name="contact_number_colon">联系电话：</string>
    <string name="contacts_colon">联系人：</string>
    <string name="home">家</string>
    <string name="sub_industry">子行业</string>
    <string name="please_industry">请输入子行业</string>
    <string name="company_logo">公司logo(选填)</string>
    <string name="com_logo">公司logo</string>
    <string name="business_license">营业执照(选填)</string>
    <string name="busy_license">营业执照</string>
    <string name="business_license_number">执照号码(选填)</string>
    <string name="busy_license_number">执照号码</string>
    <string name="please_input_business_license_number">请输入执照号码</string>
    <string name="trading_area">商圈(选填)</string>
    <string name="trad_area">商圈</string>
    <string name="please_input_trading_area">请输入商圈</string>
    <string name="wechat">微信(选填)</string>
    <string name="weixin">微信</string>
    <string name="please_input_wechat">请输入微信号</string>
    <string name="remarks">备注</string>
    <string name="mailbox_optional">邮箱(选填)</string>
    <string name="mailbox">邮箱</string>
    <string name="email">Email</string>
    <string name="input_email">请输入Email号</string>
    <string name="input_mailbox_optional">请输入邮箱(选填)</string>
    <string name="id_card_optional">身份证(选填)</string>
    <string name="id_card">身份证</string>
    <string name="input_id_card_optional">请输入身份证号</string>
    <string name="no_record">暂无业务记录</string>
    <string name="picture_info">图片信息</string>
    <string name="house_photos">门牌照片</string>
    <string name="company_license">公司执照</string>
    <string name="basic_info">基础信息</string>
    <string name="basic_info_optional"> 基础信息(选填)</string>
    <string name="purchase_intention">购买意向</string>
    <string name="get_qr_code">生成二维码</string>
    <string name="primary_information">主要信息(必填)</string>
    <string name="punch_clock">上班打卡</string>
    <string name="punch">打卡</string>
    <string name="query">查询</string>
    <string name="attendance_record">考勤记录</string>
    <string name="please_input">请输入</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="client_info">客户信息</string>
    <string name="add_picture">添加图片</string>
    <string name="all_picture">全部照片</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="camera_picture">拍摄照片</string>
    <string name="transaction_price">成交价格</string>




</resources>
